<resources>
    <string name="app_name">App Locker</string>
    <string name="ok">OK</string>
    <string name="protect_your_privacy_and_secrets">Protect your privacy and secrets!</string>
    <string name="create_your_password">Create your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="not_correct_password_create">Password does not match password created</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="settings">Settings</string>
    <string name="turn_on_off_app_locker">Turn on/off App Locker</string>
    <string name="change_password">Change password</string>
    <string name="change_theme">Change theme</string>
    <string name="intrusion_alert">Intrusion alert</string>
    <string name="number_of_password_entered">Number of password entered</string>
    <string name="sound">Sound</string>
    <string name="confirm_change_password">Confirm change password</string>
    <string name="please_reset_app">Interface has been changed, please restart the app</string>
    <string name="backup_password">Backup password</string>
    <string name="restart_app">Please kill the app to complete the installation</string>
    <string name="wrong_password">Wrong password please re-enter.You entered the wrong : </string>
    <string name="wrong_password_security">Wrong password please re-enter.</string>
    <string name="blank_password">Password can not be blank</string>
    <string name="loading_data">Loading data...</string>
    <string name="is_running">App locker is running!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
